# spec-rrv-pytest

./: .gitignore  README.md  pyproject.toml  requirements.txt
day1/: strong_password.py  test_strong_password.py
day2/: encode_decode.py  test_encode_decode.py
day3/: test_fixtures.py
day3/django_project/: pytest.ini
day3/django_project/books/: models.py  urls.py  views.py
day3/django_project/books/migrations/: 0001_initial.py
day3/django_project/django_project/: settings.py  urls.py
day3/django_project/pages/: urls.py
day3/django_project/templates/: base.html
day3/django_project/templates/books/: detail.html  list.html
day3/django_project/templates/pages/: home.html
day3/django_project/tests/books/: conftest.py  test_models.py  test_views.py
day3/django_project/tests/pages/: conftest.py  test_views.py
day4/flask_user_management/: app.py  models.py
day4/flask_user_management/tests/: conftest.py  test_user_manager.py
day4/flask_user_management/tests/mocking/: conftest.py  test_user_manager_mocked.py
day5/Selenium_examples/start/: gs_Chrome.py  gs_Firefox.py
day5/Selenium_examples/work_example/: test_site_example.py
day5/app_example/: pytest.ini
day5/app_example/app/: database.py  main.py
day5/app_example/tests/: conftest.py  test_main.py
