[project]
name = "spec-rrv-pytest"
version = "0.1.0"
description = "Practice for specialist.ru-pytest"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.8",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "pydantic>=2.12.4",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
]
