[project]
name = "spec-rrv-pytest"
version = "0.1.0"
description = "Practice for specialist.ru-pytest"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.8",
    "fastapi[all]>=0.121.2",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "httpx>=0.28.1",
    "pdfminer>=20191125",
    "pydantic>=2.12.4",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.1",
    "selenium>=4.38.0",
    "sqlalchemy>=2.0.44",
    "textract>=1.6.5",
    "webdriver-manager>=4.0.2",
]
